K8s/example-4/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 6-example
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 8080
    targetPort: http
